--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -158,7 +158,7 @@ ul {
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    max-width: 60%;
+    max-width: 30%;
 }
 
 .incoming-message {
@@ -169,8 +169,9 @@ ul {
 
 .outgoing-message {
     align-self: flex-end;
+    margin-left: 451px;
     background-color: #ffccbc; /* Soft orange background for outgoing messages */
-    color: #bf360c; /* Darker color for text */
+    color: #004d40; /* Darker color for text */
 }
 
 .message-text {
